--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "bootstrap": "^4.6.0",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
+    "prop-types": "15.7.2",
     "react": "^17.0.1",
+    "react-animation-components": "3.0.0",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-transition-group": "4.4.1",
     "reactstrap": "^8.9.0",
     "typeface-montserrat": "^1.1.13",
     "typeface-open-sans": "^1.1.13",
